<resources>
    <string name="app_name">Good Idea Card</string>
    <string name="app_name_dev">Good Idea Card.dev</string>
    <string name="app_name_rel">Good Idea Card.rel</string>
    <string name="card_1_main_content">The three elements of persuasion\n\nEthos,\nPathos,\nand Logos.</string>
    <string name="card_1_sub_content" translatable="false" />
    <string name="card_1_sub_content_type" translatable="false" />
    <string name="card_2_main_content">Without the rain,\nthere would be no rainbow.</string>
    <string name="card_2_sub_content">Gilbert K. Chesterton</string>
    <string name="card_2_sub_content_type" translatable="false" />
    <string name="card_3_main_content" translatable="false">All work and no play\nmakes jack a dull boy.</string>
    <string name="card_3_sub_content" translatable="false" />
    <string name="card_3_sub_content_type" translatable="false" />
    <string name="card_4_main_content">盡人事待天命</string>
    <string name="card_4_sub_content">Do your best and\nleave the rest to fate.</string>
    <string name="card_4_sub_content_type">0</string>
    <string name="card_5_main_content">Success is where preparation\nand opportunity meet.</string>
    <string name="card_5_sub_content">Seneca</string>
    <string name="card_5_sub_content_type" translatable="false" />
    <string name="card_6_main_content">The secret of success is\nconstancy of purpose.</string>
    <string name="card_6_sub_content">Benjamin Disraeli</string>
    <string name="card_6_sub_content_type" translatable="false" />
    <string name="card_7_main_content">Nothing is more despicable than respect based on fear.</string>
    <string name="card_7_sub_content">Albert Camus</string>
    <string name="card_7_sub_content_type" translatable="false" />
    <string name="card_8_main_content">初心不忘 磨斧作針</string>
    <string name="card_8_sub_content">Never forget\nyour original intention,\nand you can grind\nan axe into a needle.</string>
    <string name="card_8_sub_content_type">0</string>
    <string name="card_9_main_content">Living well is best revenge.</string>
    <string name="card_9_sub_content">Talmud</string>
    <string name="card_9_sub_content_type" translatable="false" />
    <string name="card_10_main_content">If you want peace,\nprepare for war.</string>
    <string name="card_10_sub_content" translatable="false" />
    <string name="card_10_sub_content_type" translatable="false" />
    <string name="card_11_main_content">If you don\'t start,\nyou will never find the way.</string>
    <string name="card_11_sub_content">Zig Ziglar</string>
    <string name="card_11_sub_content_type" translatable="false" />
    <string name="card_12_main_content">The die is cast</string>
    <string name="card_12_sub_content">Julius caesar</string>
    <string name="card_12_sub_content_type" translatable="false" />
    <string name="card_13_main_content">If you don\'t live as you think,\nyou will think as you live.</string>
    <string name="card_13_sub_content">Paul Valéry</string>
    <string name="card_13_sub_content_type" translatable="false" />
    <string name="card_14_main_content">Never, never, never give up.</string>
    <string name="card_14_sub_content">Winston Churchill</string>
    <string name="card_14_sub_content_type" translatable="false" />
    <string name="card_15_main_content">Life can only\nbe understood backwards;\nbut it must be lived forwards.</string>
    <string name="card_15_sub_content">Søren Kierkegaard</string>
    <string name="card_15_sub_content_type" translatable="false" />
    <string name="card_16_main_content">I fear not the man\nwho has practiced\n10,000 kicks once,\n\nbut I fear the man\nwho has practiced\none kick 10,000 times.</string>
    <string name="card_16_sub_content">Bruce Lee</string>
    <string name="card_16_sub_content_type" translatable="false" />
    <string name="card_17_main_content">The future depends on\nwhat we do in the present.</string>
    <string name="card_17_sub_content">Mahatma Gandhi</string>
    <string name="card_17_sub_content_type" translatable="false" />
    <string name="card_18_main_content">This Too Shall Pass.</string>
    <string name="card_18_sub_content" translatable="false" />
    <string name="card_18_sub_content_type" translatable="false" />
    <string name="card_19_main_content">Know thyself.</string>
    <string name="card_19_sub_content">Socrates</string>
    <string name="card_19_sub_content_type" translatable="false" />
    <string name="card_20_main_content">If the wind will not serve,\ntake to the oars.</string>
    <string name="card_20_sub_content">Latin Proverb</string>
    <string name="card_20_sub_content_type" translatable="false" />
    <string name="card_21_main_content">It ain’t over till it’s over.</string>
    <string name="card_21_sub_content" translatable="false" />
    <string name="card_21_sub_content_type" translatable="false" />
    <string name="card_22_main_content">Age is no guarantee of maturity.</string>
    <string name="card_22_sub_content">Lawana Blackwell</string>
    <string name="card_22_sub_content_type" translatable="false" />
    <string name="card_23_main_content">It is better to light a candle\nthan curse the darkness.</string>
    <string name="card_23_sub_content">Confucius</string>
    <string name="card_23_sub_content_type" translatable="false" />
    <string name="card_24_main_content">What does not kill me\nmakes me stronger.</string>
    <string name="card_24_sub_content">Friedrich Nietzsche</string>
    <string name="card_24_sub_content_type" translatable="false" />
    <string name="card_25_main_content" translatable="false">No pain no gain.</string>
    <string name="card_25_sub_content" translatable="false" />
    <string name="card_25_sub_content_type" translatable="false" />
    <string name="card_26_main_content">Sometimes the right path is\nnot the easiest one.</string>
    <string name="card_26_sub_content" translatable="false" />
    <string name="card_26_sub_content_type" translatable="false" />
    <string name="card_27_main_content">Better late than never.</string>
    <string name="card_27_sub_content" translatable="false" />
    <string name="card_27_sub_content_type" translatable="false" />
    <string name="card_28_main_content">Every wall is a door. </string>
    <string name="card_28_sub_content" translatable="false" />
    <string name="card_28_sub_content_type" translatable="false" />
    <string name="card_29_main_content">We can give advice,\nbut we cannot give conduct.</string>
    <string name="card_29_sub_content" translatable="false" />
    <string name="card_29_sub_content_type" translatable="false" />
    <string name="card_30_main_content">You will never know\nuntil you try.</string>
    <string name="card_30_sub_content" translatable="false" />
    <string name="card_30_sub_content_type" translatable="false" />
    <string name="card_31_main_content">There are better starters\nthan me but I’m a strong finisher.</string>
    <string name="card_31_sub_content">Usain Bolt</string>
    <string name="card_31_sub_content_type" translatable="false" />
    <string name="card_32_main_content">card_32_content</string>
    <string name="card_32_sub_content">card_32_sub_content</string>
    <string name="card_32_sub_content_type" />
    <string name="card_33_main_content">card_33_content</string>
    <string name="card_33_sub_content">card_33_sub_content</string>
    <string name="card_33_sub_content_type" />
    <string name="card_34_main_content">card_34_content</string>
    <string name="card_34_sub_content">card_34_sub_content</string>
    <string name="card_34_sub_content_type" />
    <string name="card_35_main_content">card_35_content</string>
    <string name="card_35_sub_content">card_35_sub_content</string>
    <string name="card_35_sub_content_type" />
    <string name="card_36_main_content">card_36_content</string>
    <string name="card_36_sub_content">card_36_sub_content</string>
    <string name="card_36_sub_content_type" />
    <string name="card_37_main_content">card_37_content</string>
    <string name="card_37_sub_content">card_37_sub_content</string>
    <string name="card_37_sub_content_type" />
    <string name="card_38_main_content">card_38_content</string>
    <string name="card_38_sub_content">card_38_sub_content</string>
    <string name="card_38_sub_content_type" />
    <string name="card_39_main_content">card_39_content</string>
    <string name="card_39_sub_content">card_39_sub_content</string>
    <string name="card_39_sub_content_type" />
    <string name="card_40_main_content">card_40_content</string>
    <string name="card_40_sub_content">card_40_sub_content</string>
    <string name="card_40_sub_content_type" />
    <string name="card_41_main_content">card_41_content</string>
    <string name="card_41_sub_content">card_41_sub_content</string>
    <string name="card_41_sub_content_type" />
    <string name="card_42_main_content">card_42_content</string>
    <string name="card_42_sub_content">card_42_sub_content</string>
    <string name="card_42_sub_content_type" />
    <string name="card_43_main_content">card_43_content</string>
    <string name="card_43_sub_content">card_43_sub_content</string>
    <string name="card_43_sub_content_type" />
    <string name="card_44_main_content">card_44_content</string>
    <string name="card_44_sub_content">card_44_sub_content</string>
    <string name="card_44_sub_content_type" />
    <string name="card_45_main_content">card_45_content</string>
    <string name="card_45_sub_content">card_45_sub_content</string>
    <string name="card_45_sub_content_type" />
    <string name="card_46_main_content">card_46_content</string>
    <string name="card_46_sub_content">card_46_sub_content</string>
    <string name="card_46_sub_content_type" />
    <string name="card_47_main_content">card_47_content</string>
    <string name="card_47_sub_content">card_47_sub_content</string>
    <string name="card_47_sub_content_type" />
    <string name="card_48_main_content">card_48_content</string>
    <string name="card_48_sub_content">card_48_sub_content</string>
    <string name="card_48_sub_content_type" />
    <string name="card_49_main_content">card_49_content</string>
    <string name="card_49_sub_content">card_49_sub_content</string>
    <string name="card_49_sub_content_type" />
    <string name="card_50_main_content">card_50_content</string>
    <string name="card_50_sub_content">card_50_sub_content</string>
    <string name="card_50_sub_content_type" />
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="setting">Setting</string>
    <string name="language">Language</string>
    <string name="add_card_pack">Add Card Pack</string>
    <string name="background">Background</string>
    <string name="default_">Default</string>
    <string name="user_settings">User Settings</string>
    <string name="korean" translatable="false">한국어</string>
    <string name="english" translatable="false">English</string>
    <string name="system_default_language">Default System Language</string>
    <string name="msg_app_close_msg">Press \'Back\' again to exit.</string>
    <string name="msg_last_card">Here is the last card.\nPlease shuffle the cards</string>
    <string name="msg_language_guide">If your preferred language is not added under \'Settings > General management > Language\',\nthe feature might not function properly.</string>
    <string name="cancel">Cancel</string>
    <string name="msg_error_1">An unexpected error has occurred.\nIf the issue persists, please contact the developer\n\nicanbee.official@gmail.com</string>
    <string name="restart">Restart</string>
    <string name="inquiry">Inquiry</string>
    <string name="msg_error_2">Does the same problem keep happening?</string>
    <string name="share_card_packs">Share Card Packs</string>
    <string name="add_card">Add Card</string>
</resources>