<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".features.exception.ErrorActivity">

    <LinearLayout
        android:id="@+id/error_top_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.15">

        <ImageView
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:src="@drawable/ic_bulb_24dp_day_night" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:text="@string/msg_error_1"
            android:textColor="@color/day_night_black_ff000000_white_ffffffff"
            android:textSize="@dimen/standard_text_size_12sp" />

        <Button
            android:id="@+id/error_btn_restart"
            android:layout_width="wrap_content"
            style="@style/default_button_text_12dp_black"
            android:layout_height="wrap_content"
            android:text="@string/restart" />
    </LinearLayout>


    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/error_bottom_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/error_top_layout">

        <TextView
            android:id="@+id/error_tv"
            android:textSize="12dp"
            android:paddingHorizontal="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="@tools:sample/lorem/random" />
    </ScrollView>


    <LinearLayout
        android:id="@+id/error_bottom_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/msg_error_2"
            android:textSize="@dimen/standard_text_size_12sp" />

        <Button
            android:id="@+id/error_btn_inquiry"
            style="@style/default_button_text_12dp_black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:text="@string/inquiry" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>