<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="12dp">

    <LinearLayout
        android:id="@+id/popup_items_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_square_rad_8dp_day_night"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/popup_items_layout_make_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:padding="14dp">

            <ImageView
                android:id="@+id/popup_items_iv_make_card"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:background="@drawable/bg_square_rad_8dp_app_them"
                android:padding="4dp"
                android:src="@drawable/ic_add_box_24dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                style="@style/popup_menu_text_style_16dp_bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:text="@string/add_card"
                app:layout_constraintBottom_toBottomOf="@id/popup_items_iv_make_card"
                app:layout_constraintStart_toEndOf="@id/popup_items_iv_make_card"
                app:layout_constraintTop_toTopOf="@id/popup_items_iv_make_card" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            style="@style/division_horiz_weak_line"
            android:layout_marginHorizontal="4dp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/popup_items_layout_share_card_pack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:padding="14dp">

            <ImageView
                android:id="@+id/popup_items_iv_share"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:background="@drawable/bg_square_rad_8dp_green_80f0a5"
                android:padding="4dp"
                android:src="@drawable/ic_share_24dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                style="@style/popup_menu_text_style_16dp_bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:text="@string/share_card_packs"
                app:layout_constraintBottom_toBottomOf="@id/popup_items_iv_share"
                app:layout_constraintStart_toEndOf="@id/popup_items_iv_share"
                app:layout_constraintTop_toTopOf="@id/popup_items_iv_share" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@drawable/bg_square_rad_8dp_day_night"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/popup_items_layout">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/popup_items_layout_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:padding="14dp">

            <ImageView
                android:id="@+id/popup_items_iv_cancel"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:background="@drawable/bg_square_rad_8dp_red_f4582d"
                android:padding="4dp"
                android:src="@drawable/ic_close_24dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/popup_text5"
                style="@style/popup_menu_text_style_16dp_bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:text="@string/cancel"
                app:layout_constraintBottom_toBottomOf="@id/popup_items_iv_cancel"
                app:layout_constraintStart_toEndOf="@id/popup_items_iv_cancel"
                app:layout_constraintTop_toTopOf="@id/popup_items_iv_cancel" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>